--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -18,7 +18,7 @@
   --ifm-color-primary-lightest: #FF918E;
   --ifm-footer-background-color: #fff;
   --ifm-link-decoration: underline;
-  --ifm-code-font-size: 95%;
+  --ifm-code-font-size: 1rem;
   --ifm-container-width-xl: 80ch;
   --ifm-container-width: 65ch;
   --ifm-font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI",
